Update config.yaml with llm_api_token value

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,7 +1,7 @@
 llm_setting:
   llm_provider: "groq" # now support "groq" and "openai" and "mistral"
   llm_model: "Llama3-70b-8192" # you can choose any model from the provider
-  llm_api_token: "gsk_" # you can get the token from the provider
+  llm_api_token: "" # you can get the token from the provider
   llm_max_tokens: 1024
 
 job_setting:
@@ -15,8 +15,8 @@ data_setting:
   save_data_path: "./data.csv"
 
 target:
-  - "Kāneiolouma Complex"
-  - "Italian language"
+  - "National Day of Prayer"
+  # - "Italian language"
   # - "Python (programming language)"
   # - "Pancreas"
   # - "Organ (biology)"
